tests/plugins/neg/divideZero/Test_2.scala
class Test {
  val y = 5 / 0   // error
  100 + 6 / 0     // error
  6L / 0L         // error
  val z = 7 / 0.0 // error
}
